--- a/app/src/main/res/layout/activity_cycle_register.xml
+++ b/app/src/main/res/layout/activity_cycle_register.xml
@@ -4,43 +4,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <TimePicker
         android:id="@+id/timePicker"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginTop="20dp"
         android:theme="@style/TimePickerStyle"
-        android:timePickerMode="spinner"
-        />
+        android:timePickerMode="spinner" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:background="@drawable/routine_rectangle"
-        android:padding="10dp"
-        >
+        android:orientation="vertical"
+        android:padding="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/choice_day"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textStyle="bold"
+                android:padding="10dp"
                 android:textColor="#202020"
-                android:padding="10dp"/>
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/datePicker"
                 android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
-                app:srcCompat="@drawable/calendar_color"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:contentDescription="@string/calender_icon_button"
+                android:focusable="true"
+                app:srcCompat="@drawable/calendar_color" />
         </LinearLayout>
 
         <LinearLayout
@@ -53,93 +56,92 @@
                 android:id="@+id/sunday"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
-                android:layout_weight="1"
-                android:textOn="일"
-                android:textOff="일"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:textColor="@color/red"
-                android:background="@drawable/toggle"
                 android:layout_margin="5dp"
-                />
+                android:layout_weight="1"
+                android:background="@drawable/toggle"
+                android:textColor="@color/red"
+                android:textOff="일"
+                android:textOn="일"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <ToggleButton
                 android:id="@+id/monday"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:textOn="월"
-                android:textOff="월"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:textColor="#202020"
                 android:background="@drawable/toggle"
-                android:layout_margin="5dp"/>
+                android:textColor="#202020"
+                android:textOff="월"
+                android:textOn="월"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <ToggleButton
                 android:id="@+id/tuesday"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:textOn="화"
-                android:textOff="화"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:textColor="#202020"
                 android:background="@drawable/toggle"
-                android:layout_margin="5dp"/>
+                android:textColor="#202020"
+                android:textOff="화"
+                android:textOn="화"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <ToggleButton
                 android:id="@+id/wednesday"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:textOn="수"
-                android:textOff="수"
-                android:textColor="#202020"
-                android:textStyle="bold"
-                android:textSize="18dp"
                 android:background="@drawable/toggle"
-                android:layout_margin="5dp"/>
+                android:textColor="#202020"
+                android:textOff="수"
+                android:textOn="수"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <ToggleButton
                 android:id="@+id/thursday"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:textOn="목"
-                android:textOff="목"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:textColor="#202020"
                 android:background="@drawable/toggle"
-                android:layout_margin="5dp"/>
+                android:textColor="#202020"
+                android:textOff="목"
+                android:textOn="목"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <ToggleButton
                 android:id="@+id/friday"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:textOn="금"
-                android:textOff="금"
-                android:textColor="#202020"
-                android:textStyle="bold"
-                android:textSize="18dp"
                 android:background="@drawable/toggle"
-                android:layout_margin="5dp"/>
+                android:textColor="#202020"
+                android:textOff="금"
+                android:textOn="금"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <ToggleButton
                 android:id="@+id/saturday"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:textOn="토"
-                android:textOff="토"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:textColor="@color/blue"
                 android:background="@drawable/toggle"
-                android:layout_margin="5dp"/>
+                android:textColor="@color/blue"
+                android:textOff="토"
+                android:textOn="토"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
 
@@ -147,31 +149,31 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:autofillHints="@string/title"
             android:backgroundTint="@color/gray"
             android:ems="10"
+            android:hint="@string/title"
             android:inputType="textPersonName"
-            android:hint="제목"
-            android:textColorHint="@color/gray"
+            android:paddingHorizontal="20dp"
             android:textColor="@color/gray"
-            android:paddingLeft="20dp"/>
+            android:textColorHint="@color/gray" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="bottom"
-            android:padding="10dp"
-            >
+            android:padding="10dp">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/cycleCancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="취소"
-                android:textSize="20dp"
-                android:textStyle="bold"
+                android:background="?attr/selectableItemBackground"
+                android:text="@string/cancel"
                 android:textColor="#202020"
-                android:background="?attr/selectableItemBackground"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/cycleRegister"
@@ -179,11 +181,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
 
-                android:text="등록"
-                android:textSize="20dp"
-                android:textStyle="bold"
+                android:background="?attr/selectableItemBackground"
+                android:text="@string/register"
                 android:textColor="#202020"
-                android:background="?attr/selectableItemBackground"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
