--- a/app/src/main/res/layout/event_item_view.xml
+++ b/app/src/main/res/layout/event_item_view.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{todoEntity.title}"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:paddingBottom="10dp"
             tools:text="Play football with friends" />
 
@@ -36,13 +36,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{todoEntity.start_date}"
-                android:textSize="13dp" />
+                android:textSize="13sp" />
             <TextView
                 android:id="@+id/itemEventText3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="~"
-                android:textSize="13dp"
+                android:text="@string/tilde"
+                android:textSize="13sp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"/>
 
@@ -50,7 +50,7 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="13dp"
+                android:textSize="13sp"
                 android:text="@{todoEntity.deadline_date}" />
         </LinearLayout>
 
