--- a/app/src/main/res/layout/recyclerview_cycle_item.xml
+++ b/app/src/main/res/layout/recyclerview_cycle_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    >
     <data>
         <import type="androidx.core.content.ContextCompat" />
         <import type="com.example.todo_list.R"/>
@@ -17,7 +17,7 @@
         android:background="@drawable/shadow"
         >
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
@@ -25,11 +25,11 @@
             <TextView
                 android:id="@+id/recycler_title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="@{cycleEntity.title}"
                 android:textColor="@color/black"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:padding="10dp"
                 android:layout_marginStart="10dp"/>
 
@@ -37,8 +37,8 @@
                 android:id="@+id/show_day"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" 월 화 수 목 금 토 일"
-                android:paddingStart="20dp"
+                android:text="@string/days"
+                android:paddingHorizontal="20dp"
                 android:layout_marginBottom="10dp"
                 />
         </LinearLayout>
@@ -50,7 +50,7 @@
             android:layout_gravity="center"
             android:layout_marginEnd="15dp"
             android:text="@{cycleEntity.time}"
-            android:textSize="20dp"
+            android:textSize="20sp"
             />
 
     </LinearLayout>
