--- a/app/src/main/res/layout/recyclerview_home_item.xml
+++ b/app/src/main/res/layout/recyclerview_home_item.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
+
         <import type="androidx.core.content.ContextCompat" />
-        <import type="com.example.todo_list.R"/>
-        <import type="com.example.todo_list.data.room.RoutineEntity"/>
+
+        <import type="com.example.todo_list.R" />
+
+        <import type="com.example.todo_list.data.room.RoutineEntity" />
+
         <variable
             name="homeEntity"
             type="com.example.todo_list.data.room.RoutineEntity" />
@@ -28,20 +31,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:padding="10dp"
                 android:text="@{homeEntity.title}"
                 android:textColor="@color/black"
-                android:textSize="15dp"
-                android:padding="10dp"/>
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/recycler_time"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:padding="10dp"
                 android:text="@{homeEntity.time}"
                 android:textColor="@color/black"
-                android:textSize="15dp"
-                android:padding="10dp"/>
+                android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 </layout>
