--- a/app/src/main/res/layout/recyclerview_hometodo_item.xml
+++ b/app/src/main/res/layout/recyclerview_hometodo_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <import type="androidx.core.content.ContextCompat" />
         <import type="com.example.todo_list.R"/>
@@ -33,7 +32,7 @@
                 android:layout_weight="1"
                 android:text="@{ToDoEntity.title}"
                 android:textColor="@color/black"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:padding="10dp"/>
             <TextView
                 android:layout_width="200dp"
@@ -43,7 +42,7 @@
                 android:textColor="@color/black"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:textSize="17dp"
+                android:textSize="17sp"
                 android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
