--- a/app/src/main/res/layout/recyclerview_cycle_item.xml
+++ b/app/src/main/res/layout/recyclerview_cycle_item.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <import type="androidx.core.content.ContextCompat" />
-        <import type="com.example.todo_list.R"/>
-        <import type="com.example.todo_list.data.room.RoutineEntity"/>
         <variable
             name="cycleEntity"
             type="com.example.todo_list.data.room.RoutineEntity" />
@@ -37,9 +33,11 @@
                 android:id="@+id/show_day"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/days"
                 android:paddingHorizontal="20dp"
                 android:layout_marginBottom="10dp"
+                entity="@{cycleEntity}"
+                days_text="@{@string/days}"
+                daily_text="@{@string/daily}"
                 />
         </LinearLayout>
 
@@ -52,6 +50,5 @@
             android:text="@{cycleEntity.time}"
             android:textSize="20sp"
             />
-
     </LinearLayout>
 </layout>
