--- a/app/src/main/res/layout/recyclerview_cycle_item.xml
+++ b/app/src/main/res/layout/recyclerview_cycle_item.xml
@@ -1,54 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
+        <import type="android.view.View" />
+
         <variable
-            name="cycleEntity"
+            name="routineEntity"
             type="com.example.todo_list.data.room.RoutineEntity" />
     </data>
-    <LinearLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/shadow"
-        >
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            >
-            <TextView
-                android:id="@+id/recycler_title"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="@{cycleEntity.title}"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:padding="10dp"
-                android:layout_marginStart="10dp"/>
+        android:background="@drawable/shadow">
 
-            <TextView
-                android:id="@+id/show_day"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="20dp"
-                android:layout_marginBottom="10dp"
-                entity="@{cycleEntity}"
-                days_text="@{@string/days}"
-                daily_text="@{@string/daily}"
-                />
-        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:contentDescription="Done Icon"
+            android:paddingStart="20dp"
+            android:paddingEnd="@dimen/zero"
+            android:src="@drawable/done"
+            android:visibility="@{routineEntity.success ? View.VISIBLE : View.GONE}"
+            app:layout_constraintEnd_toStartOf="@id/recycler_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/green" />
+
+        <TextView
+            android:id="@+id/recycler_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:paddingStart="@{routineEntity.success ? @dimen/zero : @dimen/routine_not_success_padding}"
+            android:paddingEnd="@dimen/zero"
+            android:text="@{routineEntity.title}"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="테스트" />
+
+        <TextView
+            android:id="@+id/show_day"
+            daily_text="@{@string/daily}"
+            days_text="@{@string/days}"
+            entity="@{routineEntity}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recycler_title"
+            tools:text="@string/days" />
 
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginEnd="15dp"
-            android:text="@{cycleEntity.time}"
+            android:paddingHorizontal="20dp"
+            android:text="@{routineEntity.time}"
             android:textSize="20sp"
-            />
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="00:00" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
