--- a/app/src/main/res/layout/recyclerview_home_item.xml
+++ b/app/src/main/res/layout/recyclerview_home_item.xml
@@ -1,43 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="android.view.View" />
+
         <variable
-            name="homeEntity"
+            name="routineEntity"
             type="com.example.todo_list.data.room.RoutineEntity" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="10dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="5dp">
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="Done Icon"
+            android:paddingVertical="10dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
+            android:src="@drawable/done"
+            android:visibility="@{routineEntity.success ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/green" />
 
-            <TextView
-                android:id="@+id/recycler_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="10dp"
-                android:text="@{homeEntity.title}"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
+        <TextView
+            android:id="@+id/recycler_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@{routineEntity.title}"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="테스트" />
 
-            <TextView
-                android:id="@+id/recycler_time"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:padding="10dp"
-                android:text="@{homeEntity.time}"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
-        </LinearLayout>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/recycler_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@{routineEntity.time}"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="00:00" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
