--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="red">#FF0000</color>
     <color name="todo">#EDDFB4</color>
     <color name="todo_done">#808080</color>
+    <color name="green">#2DB400</color>
 </resources>
